# CTC-sigma

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake
docs/: ARCHITECTURE.md  CTC_SIGMA_V0.3_TECHNICAL_SPECIFICATION.md  IMPLEMENTATION_STATUS.md  RESEARCH_STUDIES.md  SPEC_TRACEABILITY.md
docs/search/: CTC_SIGMA_V0.2_AUDIT.md  FOCUSED_RESEARCH_RESULTS.md
include/ctc_sigma/: arith.h  braid.h  braid_descriptor.h  branch.h  constants.h  ctc_sigma.h  dynamic_arith.h  encoder.h  field.h  fold.h  lehmer.h  parameters.h  permutation.h  round_schedule.h  sponge.h  status.h  validation.h
scripts/: build.sh  generate_kat.py
src/: arith.c  braid.c  braid_descriptor.c  branch.c  constants.c  ctc_sigma.c  dynamic_arith.c  encoder.c  field.c  fold.c  keccak.c  lehmer.c  permutation.c  round_schedule.c  sponge.c  validation.c
src/internal/: keccak.h  util.h
test/python/: conftest.py  ctc_bindings.py  garside_reference.py
test/python/integration/: test_cross_implementation.py  test_default_paths.py  test_feistel_with_test_normalizer.py  test_initial_status.py  test_kat.py  test_normalizer_validation.py  test_sponge_with_test_normalizer.py
test/python/unit/: test_arith.py  test_braid.py  test_constants.py  test_encoder.py  test_field.py  test_fold.py  test_lehmer.py  test_padding.py  test_v03_architecture.py
test/vectors/: ctc_sigma_v01_kat.json  ctc_sigma_v02_encoder_constants.json  ctc_sigma_v02_encoder_constants.sha256  ctc_sigma_v02_kat.json  ctc_sigma_v03_encoder_constants.json  ctc_sigma_v03_encoder_constants.sha256  ctc_sigma_v03_kat.json
tools/: dump_constants.c
